# computer-vision

./: README.md
action/: README.md
camera-calibration/: CMakeLists.txt  CameraCalibration  CameraCalibration.cpp  Makefile  README.md  imageList.txt  output.txt  settings.xml
cloud-viewer/: CMakeLists.txt  README.md  cloud-viewer.cpp
cnn/: README.md
color-model/: 3d-reconstruction.cpp  CMakeLists.txt  README.md  background-subtraction.cpp  color-model  color-model.cpp  find-corners.cpp  k-means.cpp  mog.cpp  project-voxel.cpp  test-background-subtraction.cpp  test-cam-shift.cpp  test-em-model.cpp  test-k-means.cpp  test-mean-shift.cpp  test-mog.cpp  test-optical-flow.cpp  voxel-reconstruction.cpp  voxel-visualization.cpp  voxel.cpp
color-model/data/: cluster.xml  config.xml  voxel.xml
color-model/data/cam1/: boardcorners.xml  intrinsics.xml
color-model/data/cam2/: boardcorners.xml  intrinsics.xml
color-model/data/cam3/: boardcorners.xml  intrinsics.xml
color-model/data/cam4/: boardcorners.xml
opencv-cpp/: 3d-reconstruction.cpp  camera-calibration.cpp  camera.yml  image_list.xml  undistort.cpp
opencv-python/: 3d-reconstruction.py  README.md  camera-calibration.py  undistort.py
voxel-space/: 3d-reconstruction.cpp  CMakeLists.txt  README.md  background-subtraction.cpp  camera-calibration.cpp  find-corners.cpp  voxel.cpp
voxel-space/data/: config.xml
voxel-space/data/cam1/: boardcorners.xml
voxel-space/data/cam2/: boardcorners.xml
voxel-space/data/cam3/: boardcorners.xml
voxel-space/data/cam4/: boardcorners.xml  intrinsics.xml
(+15 files in other folders)
